cmake_minimum_required(VERSION 3.0.0)
project(LuxPM VERSION 0.1.0)
add_executable(${PROJECT_NAME} assignment.cpp)
# set(Torch_DIR "/usr/local/Cellar/libtorch/share/cmake/Torch/")
# find_package(Torch REQUIRED PATHS /usr/local/Cellar/libtorch/)
find_package( OpenCV REQUIRED PATHS /usr/local/Cellar/opencv/)
include_directories( ${OpenCV_INCLUDE_DIRS} )
# target_link_libraries(${PROJECT_NAME} "${TORCH_LIBRARIES}" ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
include(CTest)
enable_testing()
include(CPack)